--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "formik": "^2.4.5",
+    "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
