--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="mysql://root:mysqlPass@localhost:3306/mini_project"
+DATABASE_URL="mysql://root:1234567890@localhost:3306/mini_project"
