--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.5",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
