--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     }
   },
   "dependencies": {
-    "flowbite-react": "^0.7.2"
+    "flowbite-react": "^0.7.2",
+    "react-select": "^5.8.0"
   }
 }
